@@ -1,5 +1,7 @@
 Version history for Perl module Alien::CMake
 
+  - Migrate to GitHub for issues instead of RT.
+
 0.11    09/13/2017
         - File::Fetch 0.50 is a configure require.
           Fixes prereq bug introduced in 0.10
